--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
-CHANGELOG 8MAY23 v0.59:
+CHANGELOG 14MAY23 v0.59:
 > Added powershell command (pwsh)
 > Fixed polymorphic issue on Linux builds
+> Fixed some memory leaks
 
 CHANGELOG 2MAY23 v0.55:
 > Revenant is now packaged with llvm-clang/llvm-mingw
