--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+CHANGELOG 2JULY23 v0.59.5:
+> Improved polymorphism
+> Added more hash definitions in support of future functionality
+
 CHANGELOG 21MAY23 v0.59.4:
 > Architecture part of default name (Revenant_x64/x86.exe)
 > Cleaned up types in Utilities.c
