Local debugging...all good

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ CHANGELOG 3JULY23 v0.59.5:
 > Added more hash definitions in support of future functionality
 > Random inline assembly injections break up function blocks for resilience against analysis
 > Unhooking via Perun's Fart method during command execution
+>> Unhooks before command execution, rehooks after execution
 
 CHANGELOG 21MAY23 v0.59.4:
 > Architecture part of default name (Revenant_x64/x86.exe)
