--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+CHANGELOG 4JULY23 v0.59.6:
+> Improved unhooking. Keep clean ntdll in memory instead of starting clean process every command.
+
 CHANGELOG 3JULY23 v0.59.5:
 > Improved polymorphism, removed most exceptions to dynamic poly
 > Added more hash definitions in support of future functionality
