--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,10 @@
-CHANGELOG 5JULY23 v0.59.6:
-> Improved unhooking. Keep clean ntdll in memory instead of starting clean process every command.
-> Support DLLs with all options
+CHANGELOG 6JULY23 v0.59.6:
+> DLL support
 > Revamped polymorphic egg search mechanics
 > Improved inline assembly injections to reduce impacts on performance
-
+> Improved unhooking. Keep clean ntdll in memory instead of starting clean process every command.
+> Antidebug checks run before Main and before every command execution to prevent runtime debugging
+> QoL Improvements
 
 CHANGELOG 3JULY23 v0.59.5:
 > Improved polymorphism, removed most exceptions to dynamic poly
