--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+CHANGELOG 8JULY23 v0.59.7:
+> Updated LLVM-MingW compiler
+> Bug fixes for new compiler errors
+
 CHANGELOG 6JULY23 v0.59.6:
 > DLL support
 > Revamped polymorphic egg search mechanics
