--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+CHANGELOG 10SEP23 v0.60.1:
+> Updated Readme
+> Fixed polymorphic support in x86 executables
+
 CHANGELOG 13AUG23 v0.60.0:
 > Implemented GhostFart Unhooking
 
